; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_update_adler32.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_update_adler32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @update_adler32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_adler32(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = and i32 %10, 65535
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %4, align 4
  %13 = lshr i32 %12, 16
  %14 = and i32 %13, 65535
  store i32 %14, i32* %8, align 4
  br label %15

15:                                               ; preds = %44, %3
  %16 = load i32, i32* %6, align 4
  %17 = icmp ugt i32 %16, 0
  br i1 %17, label %18, label %49

18:                                               ; preds = %15
  %19 = load i32, i32* %6, align 4
  %20 = icmp ugt i32 %19, 5550
  br i1 %20, label %21, label %22

21:                                               ; preds = %18
  br label %24

22:                                               ; preds = %18
  %23 = load i32, i32* %6, align 4
  br label %24

24:                                               ; preds = %22, %21
  %25 = phi i32 [ 5550, %21 ], [ %23, %22 ]
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %6, align 4
  %28 = sub i32 %27, %26
  store i32 %28, i32* %6, align 4
  br label %29

29:                                               ; preds = %32, %24
  %30 = load i32, i32* %9, align 4
  %31 = icmp ugt i32 %30, 0
  br i1 %31, label %32, label %44

32:                                               ; preds = %29
  %33 = load i8*, i8** %5, align 8
  %34 = getelementptr inbounds i8, i8* %33, i32 1
  store i8* %34, i8** %5, align 8
  %35 = load i8, i8* %33, align 1
  %36 = zext i8 %35 to i32
  %37 = load i32, i32* %7, align 4
  %38 = add i32 %37, %36
  store i32 %38, i32* %7, align 4
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* %8, align 4
  %41 = add i32 %40, %39
  store i32 %41, i32* %8, align 4
  %42 = load i32, i32* %9, align 4
  %43 = add i32 %42, -1
  store i32 %43, i32* %9, align 4
  br label %29

44:                                               ; preds = %29
  %45 = load i32, i32* %7, align 4
  %46 = urem i32 %45, 65521
  store i32 %46, i32* %7, align 4
  %47 = load i32, i32* %8, align 4
  %48 = urem i32 %47, 65521
  store i32 %48, i32* %8, align 4
  br label %15

49:                                               ; preds = %15
  %50 = load i32, i32* %8, align 4
  %51 = shl i32 %50, 16
  %52 = load i32, i32* %7, align 4
  %53 = or i32 %51, %52
  ret i32 %53
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
